--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,6 +26,10 @@
     <script defer src="./scripts/main.js"></script>
 </head>
 <body>
+    <div class="banner" id="meet-greet-banner">
+        <span class="close-btn" id="close-banner-btn">&times;</span>
+        <p>Join us for the Chamber of Commerce meet and greet on Wednesday at 7:00 p.m.</p>
+    </div>
     <!-- Header -->
     <header>
         <!-- Top Header -->
@@ -141,5 +145,6 @@
     <script type="module" src="./scripts/swiper.js"></script>
     <script type="module" src="./scripts/weather.js"></script>
     <script src="./scripts/spotlight.js"></script>
+    <script src="./scripts/banner.js"></script>
 </body>
 </html>
