optimazed images chamber site

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -60,22 +60,16 @@
         <div class="swiper w-full h-screen-80">
             <div class="overlay">
                 <h1>Santa Teresa Chamber of Commerce</h1>
-                <button class="btn-primary">Join us!</button>
+                <a class="btn-primary" href="./join.html">Join us!</a>
             </div>
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                    <img src="./images/100_7770.jpeg" alt="" class="w-full" />
+                    <img src="./images/slider01.webp" alt="" class="w-full" />
                 </div>
                 <div class="swiper-slide">
-                    <img src="./images/5508844329_83ddc4411a_b (1).jpg" alt="" class="w-full" />
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/8445757779_1800070f1b_b (1).jpg" alt="" class="w-full" />
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/Santateresahannes.jpg" alt="" class="w-full" />
+                    <img src="./images/slider02.webp" alt="" class="w-full" />
                 </div>
             </div>
         </div>
@@ -84,22 +78,22 @@
                 <span class="material-symbols-outlined"> badge </span>
                 <h4>Member Directory</h4>
             </a>
-            <div class="cta-card box-shadow">
+            <a href="./join.html" class="cta-card box-shadow">
                 <span class="material-symbols-outlined"> edit_square </span>
                 <h4>Join</h4>
-            </div>
-            <div class="cta-card box-shadow">
+            </a>
+            <a href="#events" class="cta-card box-shadow">
                 <span class="material-symbols-outlined"> calendar_month </span>
                 <h4>Events</h4>
-            </div>
+            </a>
         </div>
         <!-- Current Events -->
-        <section class="flex-col pd-sm event-sec">
+        <section class="flex-col pd-sm event-sec" id="events">
             <h2>Events</h2>
             <!-- Event 01 Card -->
             <div class="event-card">
                 <div class="event_image-container">
-                    <img src="./images/5508844329_83ddc4411a_b.jpg" alt="">
+                    <img src="./images/event01.webp" alt="">
                 </div>
                 <div class="event_info-container pd-sm">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, ullam.</p>
@@ -109,7 +103,7 @@
             <!-- Event 02 Card -->
             <div class="event-card">
                 <div class="event_image-container">
-                    <img src="./images/8445757779_1800070f1b_b (1).jpg" alt="">
+                    <img src="./images/event01.webp" alt="">
                 </div>
                 <div class="event_info-container pd-sm">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem debitis totam dicta,
